Startup warning in mongos for Read/Write Concern

XMLWordPrintableJSON

    • Replication
    • Fully Compatible
    • ALL
    • v7.3, v7.0
    • Repl 2024-02-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I upgraded my Sharded cluster to MongoDB version 7.0.4. When I open a `mongosh`
       then I get this warning:

       

      Using MongoDB:          7.0.4
      Using Mongosh:          2.1.1
      
      ------
         The server generated these startup warnings when booting
         2024-01-08T12:53:48.900+01:00: This node is running as a shard server, but persisted Read/Write Concern (RWC) defaults are present. This node was likely previously in an unsharded replica set or a config server. The RWC defaults on this node will not be used
      ------
      

      It is running as a config server, not a shard server as pointed out in the warning message.

      sharding:
        clusterRole: configsvr
      

       

        1. mongod.zip
          39 kB
        2. test.txt
          9 kB

            Assignee:
            Ali Mir
            Reporter:
            Wernfried Domscheit (EXT)
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: