SERVER-84628 Only log startup warning about persisted CWRWC defaults for shard servers (#18421)

(cherry picked from commit 58d45fe39687e4b8a82c6b7d6abe1c3da17d1f3c)

GitOrigin-RevId: fc18ea37a5e7deb19c69348da4e8715113f7ee52